place holder image changed

--- a/css/main.css
+++ b/css/main.css
@@ -99,7 +99,7 @@ main {
 
 .project__screenshot .screenshot__image {
   display: block;
-  width: 35vw;
+  width: 40vw;
   margin: 0 auto;
 }
 
@@ -111,13 +111,13 @@ main {
 }
 
 .project__about .about__name {
-  margin: 15px 0;
+  margin-bottom: 10px;
   font-size: 1.2em;
   text-align: center;
 }
 
 .project__about .about__buttons {
-  margin: 15px 0;
+  margin-top: 10px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -127,7 +127,7 @@ main {
 }
 
 .project__about .about__buttons a {
-  width: 5vw;
+  width: 70px;
   border-radius: 5px;
   padding: 5px 10px;
   text-align: center;
