--- a/src/tab/Home.scss
+++ b/src/tab/Home.scss
@@ -90,38 +90,62 @@
 }
 
 .Projects {
-  .Card {
-    margin: 25px 25px;
-    border-left: solid 0.5px #4ae444;
-    .PrjName {
-      font-family: $mainfont;
-      text-decoration: underline;
-      color: #5d5d5d;
-      font-size: 1.2em;
-      padding: 4px 10px;
-    }
-
-    .Description {
-      font-family: $secondaryfont;
-      color: #727272;
-      font-size: 1em;
-      padding: 4px 10px;
-    }
-
-    .Languages {
-      color: #727272;
-      font-family: $secondaryfont;
-      font-size: 0.8em;
-      display: flex;
-      flex-direction: row;
-      flex-wrap: wrap;
-      .Lang {
-        padding: 4px 5px;
-        margin: 10px 10px;
-        border: solid 2px #4ae444;
-        border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  .Container {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    .Project {
+      margin: 25px 25px;
+      border-left: solid 0.5px #4ae444;
+      .PrjName {
+        font-family: $mainfont;
+        text-decoration: underline;
+        color: #5d5d5d;
+        font-size: 1.2em;
+        padding: 4px 10px;
+      }
+      .Description {
+        font-family: $secondaryfont;
+        color: #727272;
+        font-size: 1em;
+        padding: 4px 10px;
+      }
+      .Languages {
+        color: #727272;
+        font-family: $secondaryfont;
+        font-size: 0.8em;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        .Lang {
+          padding: 4px 5px;
+          margin: 5px 7px;
+          border: solid 2px #4ae444;
+          border-radius: 5px;
+        }
       }
     }
+  }
+}
+
+.Links {
+  margin: 17px 15px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-content: center;
+  .Btn {
+    background-color: #3fc83a;
+    border-radius: 8px;
+    color: #ffffff;
+    font-family: $secondaryfont;
+    text-decoration: none;
+    text-align: center;
+    font-size: 1.1em;
+    padding: 5px 25px;
+    margin: 8px 0;
   }
 }
 
@@ -129,24 +153,27 @@
   .Information .Me {
     padding-top: 25px;
     .Name {
-      font-size: 2em;
+      font-size: 1.6em;
     }
     .Title {
-      font-size: 1.2em;
+      font-size: 1.1em;
     }
   }
   .Information .Contacts {
+    padding-top: 25px;
     font-size: 0.8em;
   }
   .Skills {
     display: flex;
     flex-direction: row;
+    margin-bottom: 25px;
   }
   .Home {
+    grid-template-columns: 1fr;
     grid-template-rows: auto 1fr auto;
     grid-template-areas:
-      "info info info"
-      "projects projects links"
-      "skills skills skills";
+      "info"
+      "projects"
+      "skills";
   }
 }
