--- a/src/tab/Home.scss
+++ b/src/tab/Home.scss
@@ -131,6 +131,16 @@ $secaccent: #727272;
   }
 }
 
+.Projects,
+.Skills {
+  & h2 {
+    font-family: "Galada", cursive;
+    color: #4ae444;
+    font-size: 1.8em;
+    text-align: center;
+  }
+}
+
 .Links {
   margin: 17px 15px;
   display: flex;
