--- a/src/tab/Home.scss
+++ b/src/tab/Home.scss
@@ -132,7 +132,8 @@ $secaccent: #727272;
 }
 
 .Projects,
-.Skills {
+.Skills,
+.About {
   & h2 {
     font-family: "Galada", cursive;
     color: #4ae444;
@@ -162,46 +163,19 @@ $secaccent: #727272;
 
 .About {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
-  .AboutImg {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    flex-grow: 1;
-    margin: 0 25px;
-    .Frame {
-      height: 220px;
-      width: 150px;
-      border: solid 1px $maincolor;
-      transform: translate(20px, -20px);
-      img {
-        display: block;
-        height: 220px;
-        width: 150px;
-        background-color: $secaccent;
-        transform: translate(-20px, 20px);
-      }
-    }
+  margin: 25px 25px;
+  .Intro {
+    color: $mainaccent;
   }
-  .AboutText {
-    margin: 25px 25px;
-    width: 400px;
-    h2 {
-      font-family: "Galada", cursive;
-      text-decoration: underline;
-      color: $mainaccent;
-      font-size: 1.6em;
-    }
-    .Intro {
-      color: $mainaccent;
-    }
-    p {
-      line-height: 25px;
-      font-size: 1.2em;
-      color: $secaccent;
-      font-family: "Baloo Da 2", cursive;
-    }
+  p {
+    width: 60vw;
+    text-align: center;
+    line-height: 25px;
+    font-size: 1.15em;
+    color: $secaccent;
+    font-family: "Baloo Da 2", cursive;
   }
 }
 
@@ -219,7 +193,7 @@ $secaccent: #727272;
     padding-top: 25px;
     font-size: 0.8em;
   }
-  .Skills {
+  .Skills > .SkillsGrid {
     display: grid;
     grid-template-columns: 1fr 1fr;
     margin-bottom: 25px;
@@ -231,23 +205,7 @@ $secaccent: #727272;
       "skills"
       "projects";
   }
-  .About {
-    flex-direction: column;
-    .AboutImg {
-      flex-direction: row;
-      flex-grow: 0;
-      width: 100%;
-      .Frame {
-        height: 150px;
-        width: 100px;
-        img {
-          height: 150px;
-          width: 100px;
-        }
-      }
-    }
-    .AboutText {
-      width: auto;
-    }
+  .About > p {
+    width: auto;
   }
 }
