--- a/src/App.scss
+++ b/src/App.scss
@@ -4,7 +4,7 @@ $secondaryfont: "Baloo Da 2", cursive;
 
 body {
   background-color: #ffffff;
-  overflow-y: clip;
+  overflow-y: overlay;
 }
 
 .App {
